[package]
name = "bunko"
description = "bunko is a lightweight, flexible, high-performance Rust library for data compression and decompression."
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/reinacchi/bunko"
keywords = ["compression", "decompression", "zlib", "deflate", "gzip"]
license = "MIT"

[dependencies]
bincode = "1.3.3"
flate2 = { version = "1.0", features = ["zlib"] }
serde = "1.0.215"
